# QuADS

./: .gitignore  Cargo.toml  README
src/: catalog_scraper.rs  html_generator.rs  main.rs  student.rs
