[package]
name = "QuADS"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11", features = ["blocking", "json"] } #for fetching raw HTML
scraper = "0.16.0" #enables HTML parsing and querying with CSS selectors
lazy_static = "1.4" #creates an initialization wrapper around static variables
warp = "0.3.5" #web framework
tokio = { version = "1", features = ["full"] } #used for async stuff for the web framework
serde = { version = "1.0", features = ["derive"] } #serialization-related functionality